--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://powerful-sea-00313.herokuapp.com/api/v1/
+REACT_APP_API_URL=https://territorial-data-api.herokuapp.com/api-docs/
